--- a/HobknobClientNet.nuspec
+++ b/HobknobClientNet.nuspec
@@ -1,14 +1,12 @@
 <?xml version="1.0"?><package>
   <metadata>
     <id>hobknob-client-net</id>
-	<!-- Version is changed via the Package.json file -->
-    <version>2.1.2</version>
-    <authors>OpenTable</authors>
-    <owners>OpenTable</owners>
-    <projectUrl>https://github.com/opentable/hobknob-client-net</projectUrl>
+    <version>1.0.0</version>
+    <authors>OpenTable, Tombola Ltd</authors>
+    <owners>OpenTable, Tombola Ltd</owners>
     <description>A .net client for Hobknob</description>
-    <releaseNotes>Multi feature toggle support added.</releaseNotes>
-    <copyright>Copyright 2015</copyright>
-    <tags>Feature Toggle Switch Hobknob</tags>
+    <files>
+        <file src="HobknobClientNet\bin\**\*.*" exclude="HobknobClientNet\bin\*.pdb" target="bin" />
+    </files>
   </metadata>
 </package>
