--- a/HobknobClientNet.nuspec
+++ b/HobknobClientNet.nuspec
@@ -1,6 +1,6 @@
 <?xml version="1.0"?><package>
   <metadata>
-    <id>hobknob-client-net</id>
+    <id>tombola-hobknob-client-net</id>
     <version>1.0.0</version>
     <authors>OpenTable, Tombola Ltd</authors>
     <owners>OpenTable, Tombola Ltd</owners>
